# trafficserver

./: configure.ac
configs/: Makefile.am  records.yaml.default.in
contrib/python/: compare_RecordsConfigcc.py
doc/: Pipfile
doc/.tx/: config
doc/admin-guide/configuration/: cache-basics.en.rst
doc/admin-guide/files/: records.config.en.rst  records.yaml.en.rst  sni.yaml.en.rst
doc/admin-guide/jsonrpc/: index.en.rst
doc/admin-guide/logging/: formatting.en.rst
doc/admin-guide/plugins/: authproxy.en.rst  header_rewrite.en.rst
doc/admin-guide/tools/: index.en.rst
doc/appendices/command-line/: traffic_ctl_jsonrpc.en.rst
doc/developer-guide/api/functions/: TSHttpOverridableConfig.en.rst  TSPluginDSOReloadEnable.en.rst  TSRPCRegister.en.rst  TSRecYAMLConfigParse.en.rst  TSYAMLCoreVersionGet.en.rst
doc/developer-guide/api/types/: TSOverridableConfigKey.en.rst
doc/developer-guide/debugging/: debug-tags.en.rst
doc/developer-guide/jsonrpc/: index.en.rst  jsonrpc-api.en.rst  jsonrpc-architecture.en.rst  jsonrpc-handler-development.en.rst  jsonrpc-node.en.rst
doc/ext/: traffic-server.py
doc/locale/ja/LC_MESSAGES/admin-guide/monitoring/logging/: log-formats.en.po
include/records/: RecYAMLDecoder.h  RecYAMLDefs.h
include/shared/: RecordsConfig.h
include/shared/rpc/: RPCRequests.h  yaml_codecs.h
include/ts/: apidefs.h.in  ts.h
include/tscore/: Errata.h  ink_resolver.h
iocore/cache/: CacheHosting.cc
iocore/cache/test/: main.cc  main.h
iocore/eventsystem/unit_tests/: test_IOBuffer.cc
iocore/hostdb/: HostDB.cc
iocore/net/: P_SNIActionPerformer.h  QUICPacketHandler_quiche.cc  SSLConfig.cc  SSLSNIConfig.cc  SSLUtils.cc
iocore/net/quic/: QUICConfig.cc
iocore/net/quic/test/: event_processor_main.cc  main.cc
mgmt/: ConfigManager.cc  ConfigManager.h  FileManager.cc  FileManager.h  Makefile.am  RecordsConfig.cc  RecordsConfig.h  RecordsConfigUtils.cc
mgmt/config/: FileManager.cc
mgmt/rpc/: Makefile.am  README.md
mgmt/rpc/common/: JsonRpcApi.h
mgmt/rpc/config/: JsonRpcConfig.h
mgmt/rpc/jsonrpc/: Defs.h  JsonRpc.cc  JsonRpc.h
mgmt/rpc/jsonrpc/error/: RpcError.cc  RpcError.h
mgmt/rpc/jsonrpc/json/: YAMLUtils.h
mgmt/rpc/server/: LocalUnixSocket.cc  LocalUnixSocket.h  RpcServer.cc  RpcServer.h  TransportBase.cc  TransportBase.h
mgmt/rpc/unit_tests/: test_basic_protocol.cc  test_rpcserver.cc
mgmt/rpc/unit_tests/test_utils/: LocalSocketClient.h  helpers.h
mgmt2/: Makefile.am
mgmt2/rpc/: Makefile.am
mgmt2/rpc/common/: JsonRpcApi.h
mgmt2/rpc/handlers/: Admin.h
mgmt2/rpc/handlers/common/: ErrorId.h  Errors.cc  Errors.h  RecordsUtils.cc  RecordsUtils.h  convert.h
mgmt2/rpc/handlers/config/: ConfigErrors.cc  ConfigErrors.h  ConfigUtils.cc  ConfigUtils.h  Configuration.cc  Configuration.h
mgmt2/rpc/handlers/metrics/: Metrics.cc
mgmt2/rpc/handlers/records/: Records.cc
mgmt2/rpc/handlers/server/: Server.cc
mgmt2/rpc/handlers/storage/: Storage.cc  Storage.h
mgmt2/rpc/jsonrpc/: Defs.h  JsonRPC.h  JsonRPCManager.h
mgmt2/rpc/jsonrpc/error/: RpcError.h
mgmt2/rpc/jsonrpc/json/: YAMLCodec.h
mgmt2/rpc/jsonrpc/unit_tests/: test_basic_protocol.cc
mgmt2/rpc/schema/: jsonrpc_request_schema.json
mgmt2/rpc/server/: IPCSocketServer.cc  IPCSocketServer.h
mgmt2/rpc/server/unit_tests/: test_rpcserver.cc
plugins/conf_remap/: conf_remap.cc
plugins/lua/: ts_lua_http_config.c
proxy/: ControlMatcher.cc  Plugin.cc  Plugin.h
proxy/http/: HttpConfig.cc  HttpConfig.h  HttpSM.cc  HttpTransact.cc  HttpTransact.h
proxy/http/remap/: PluginFactory.cc  PluginFactory.h  RemapConfig.cc
proxy/http/remap/unit-tests/: plugin_testing_common.cc  test_PluginFactory.cc
proxy/http2/unit_tests/: main.cc
proxy/http3/test/: main.cc  main_qpack.cc
proxy/logging/: LogStandalone.cc
src/records/: Makefile.am  P_RecCore.cc  RecConfigParse.cc  RecCore.cc  RecUtils.cc  RecYAMLDecoder.cc  RecordsConfig.cc
src/shared/: RecordsConfig.cc  overridable_txn_vars.cc
src/traffic_crashlog/: Makefile.inc  traffic_crashlog.cc
src/traffic_ctl/: CtrlPrinters.cc
src/traffic_ctl_jsonrpc/: CtrlCommands.cc  CtrlCommands.h  CtrlPrinters.cc  CtrlPrinters.h  traffic_ctl.cc
src/traffic_ctl_jsonrpc/jsonrpc/: CtrlRPCRequests.h  RPCRequests.h  yaml_codecs.h
src/traffic_layout/: engine.cc  info.cc
src/traffic_manager/: AddConfigFilesHere.cc
src/traffic_quic/: traffic_quic.cc
src/traffic_server/: HostStatus.cc  InkAPI.cc  InkAPITest.cc  Makefile.inc  traffic_server.cc
src/traffic_top/: traffic_top.cc
src/tscore/: MatcherUtils.cc
tests/: Makefile.am
tests/gold_tests/autest-site/: jsonrpc.py  jsonrpc_client.test.ext  trafficserver.test.ext
tests/gold_tests/jsonrpc/: basic_plugin_handler.test.py  jsonrpc_api_schema.test.py
tests/gold_tests/jsonrpc/json/: admin_config_set_records_req.json
tests/gold_tests/jsonrpc/plugins/: Makefile.inc  jsonrpc_plugin_handler_test.cc
tests/gold_tests/logging/: log_retention.test.py
tests/gold_tests/pluginTest/lua/: lua_states_stats.test.py
tests/gold_tests/pluginTest/regex_revalidate/: regex_revalidate.test.py
tests/gold_tests/pluginTest/traffic_dump/: traffic_dump.test.py  traffic_dump_http3.test.py
tests/gold_tests/records/: conf_remap_using_yaml.test.py  records_yaml.test.py
tests/gold_tests/records/gold/: full_records.yaml
tests/gold_tests/records/legacy_config/: full_records.config
tests/gold_tests/redirect/: 2742.test.py  redirect_relative_uri.test.py
tests/gold_tests/redirect/replay/: 2742_bar_replay.yaml  2742_foo2_replay.yaml  2742_foo_replay.yaml
tests/gold_tests/remap/: conf_remap_float.test.py  remap_ip_resolve.test.py
tests/gold_tests/tls/: tls_tunnel.test.py
tools/: build_h3_tools.sh
tools/records/: convert2yaml.py
